<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">Unisannio</string>
     <string name="drawer_open">Menu opened</string>
     <string name="drawer_close">Menu closed</string>
     <string name="action_settings">Settings</string>
     <string name="ateneo"><b><i>Ateneo</i></b></string>
     <string name="ateneo_avvisi">Avvisi Ateneo</string>

     <!--elementi spinner sezione ateneo-->
    <string-array name="ateneo">
        <item>Ateneo</item>
        <item>Avvisi Studenti</item>

    </string-array>

     <!--fine elementi-->

    <!--elementi spinner sezione ingegneria-->
    <string-array name="ingegneria">
        <item>Avvisi Dipartimento</item>
        <item>Avvisi Studenti</item>
        <item>Occupazione Aule</item>

    </string-array>

    <!--fine elementi-->

    <!--elementi spinner sezione ingegneria-->
    <string-array name="scienze">
        <item>Avvisi Studenti</item>
    </string-array>

    <!--fine elementi-->

    <!--elementi spinner sezione ingegneria-->
    <string-array name="giur">
        <item>Avvisi Studenti</item>
        <item>Comunicazioni</item>

    </string-array>

    <!--fine elementi-->

    <string-array name="economia">
        <item>Avvisi Studenti</item>
    </string-array>

    <!--fine elementi-->

    <string name="occupazione_aule">Occupazione Aule</string>
    <string name="ingegneria"><b><i>Ingegneria</i></b></string>
    <string name="scienze"><b><i>Scienze e Tecnologie</i></b></string>
    <string name="giurisprudenza"><b><i>Giurisprudenza</i></b></string>
    <string name="sea"><b><i>S.E.A.</i></b></string>
    <string name="avvisi_studenti">Avvisi Studenti</string>
    <string name="sito_web">Sito WEB</string>
    <string name="mappa">Mappa</string>
    <string name="avvisi_dipartimento">Avvisi Dipartimento</string>
    <string name="comunicazioni">Comunicazioni</string>
    <string name="about"><b><i>About</i></b></string>
    <string name="alter_ego">Alter Ego Solutions</string>
    <string name="github">GitHub</string>
    <string name="title_activity_detail">News</string>
    <string name="transition_article_title">transition_article_title</string>
    <string name="transition_article_date">transition_article_date</string>
    <string name="transition_article_author">transition_article_author</string>
    <string name="action_share">Share</string>
    <string name="title_activity_maps">Map</string>
    <string name="header_title">Università Degli Studi Del Sannio</string>
    <string name="header_login_mail">username_account@unisannio.it</string>
    <string name="title_activity_cercapersone">Cerca Persone</string>
    <string name="cercapersone">Cerca Persone</string>
    <string name="antanipsum">Segua col dito. Vede, se va giù non va su. Se va su non va giù. Si faccia aiutare dalla suora. È quello che stavo
        dicendo, no!? Sorella? Eh!? Col tarapia tapioco come se fosse la supercazzola per lei. Voglio il cappellano, il cappellano! Ho visto la
        Madonna!
    </string>
    <string name="cercapersone_editText">Inserisci il nome della persona da ricercare</string>
    <string name="activity_cercapersone_detail_title">Dettaglio Persona</string>
    <string name="custom_tab_error">"Non possiedi installato il browser Google Chrome"</string>
    <string name="custom_tab_error_activity">"Impossibile lanciare l'activity di browsing"</string>
    <string name="title_activity_ateneo">Dipartimento</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_scienze">Studenti</string>
    <string name="title_activity_giurisprudenza">Studenti</string>
    <string name="title_activity_sea">Studenti</string>
    <string name="title_activity_giurisprudenza_comunicazioni">Comunicazioni</string>
    <string name="title_activity_ingegneria_dipartimento">Dipartimento</string>
    <string name="title_activity_ingegneria_avvisi_studenti">Studenti</string>
    <string name="title_activity_ateneo_studenti">Studenti</string>

</resources>
