<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/article_card"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/small"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:padding="@dimen/medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/article_card_date"
                android:transitionName="@string/transition_article_date"
                android:textColor="@color/primaryDarkColor"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

        <TextView
                android:id="@+id/article_card_author"
                android:tag=""
                android:layout_below="@+id/article_card_date"
                android:transitionName="@string/transition_article_title"
                android:visibility="gone"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textPrimaryColor"
                android:layout_marginTop="@dimen/small"/>
        <TextView
                android:id="@+id/article_card_title"
                android:layout_below="@+id/article_card_author"
                android:transitionName="@string/transition_article_author"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textPrimaryColor"
                android:layout_marginTop="@dimen/small"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>