<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView_cercapersone_detail"
        android:layout_below="@+id/toolbar_actionbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/white"
            tools:context="solutions.alterego.android.unisannio.ingegneria.IngegneriaCercapersoneDetailActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:transitionName="@string/transition_article_date"
                tools:text="email"
                android:id="@+id/detail_cercapersone_email"
                android:textColor="@color/unisannio_red"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="role"
                android:transitionName="@string/transition_article_title"
                android:id="@+id/detail_cercapersone_role"
                android:layout_below="@+id/detail_cercapersone_email"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                tools:text="office"
                android:textColor="@color/black"
                android:id="@+id/detail_cercapersone_office"
                android:layout_below="@+id/detail_cercapersone_role"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                tools:text="phone"
                android:textColor="@color/black"
                android:id="@+id/detail_cercapersone_phone"
                android:layout_below="@+id/detail_cercapersone_office"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                tools:text="web page"
                android:textColor="@color/black"
                android:id="@+id/detail_cercapersone_webpage"
                android:layout_below="@+id/detail_cercapersone_phone"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                tools:text="tutoring"
                android:textColor="@color/black"
                android:id="@+id/detail_cercapersone_tutoring"
                android:layout_below="@+id/detail_cercapersone_webpage"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="name"
                android:textStyle="bold"
                android:textColor="@color/accentColor"
                android:transitionName="@string/transition_article_author"
                android:id="@+id/detail_cercapersone_name"
                android:layout_below="@+id/detail_cercapersone_tutoring"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
